Correcting alignments.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -626,7 +626,7 @@ nav {
   font-weight: bold;
 
   .nav-title {
-    margin-top:15px;
+    margin-top:14px;
     padding-top: 0;
     padding-left: 20px;
   }
